Try installing hslua separately on circle

--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ dependencies:
   override:
     - cabal update
     - cabal sandbox init
+    - cabal install hslua-0.4.1
     - cabal install regex-tdfa-1.2.1
     - cabal install --only-dependencies -j
     - cabal configure
