--- a/amc-workshop.cabal
+++ b/amc-workshop.cabal
@@ -5,7 +5,7 @@ cabal-version:      >= 1.10
 
 executable site
   main-is:          site.hs
-  build-depends:    base == 4.*
+  build-depends:    base == 4.8
                   , hakyll == 4.8.3.*
   ghc-options:      -threaded
   default-language: Haskell2010
