--- a/circle.yml
+++ b/circle.yml
@@ -1,23 +1,20 @@
 machine:
-  pre:
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 20
-    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.6 20
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 10
-    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 10
-  ghc:
-    version: 7.8.4
+  environment:
+    LANG: C.UTF-8
 dependencies:
-  override:
-    - cabal update
-    - cabal sandbox init
-    - cabal install regex-tdfa-1.2.1
-    - cabal install --only-dependencies -j
-    - cabal configure
+  cache_directories:
+    - "~/.stack"
+    - "~/site-generator/.stack-work"
+  pre:
+    - wget https://github.com/commercialhaskell/stack/releases/download/v0.1.6.0/stack-0.1.6.0-linux-x86_64.tar.gz -O /tmp/stack.tar.gz
+    - tar xvzf /tmp/stack.tar.gz -C /tmp
+
 test:
   override:
-    - cabal build
+    - cd site-generator && stack build
   post:
-    - cabal run build
+    - cd site-generator && stack exec site build
+    - cd site-generator && stack exec site deploy
 
 deployment:
   production:
@@ -25,7 +22,7 @@ deployment:
     commands:
       - git config --global user.email circleci@circleci
       - git config --global user.name CircleCI
-      - cd _site/ && git status
-      - cd _site/ && git add --all
-      - cd _site/ && git commit -m "Update (`date '+%F %T %Z'`) [ci skip]"
-      - cd _site/ && git push origin master
+      - git status
+      - git add --all
+      - git commit -m "Update (`date '+%F %T %Z'`) [ci skip]"
+      - git push origin master
