--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ dependencies:
   pre:
     - wget https://github.com/commercialhaskell/stack/releases/download/v0.1.6.0/stack-0.1.6.0-linux-x86_64.tar.gz -O /tmp/stack.tar.gz
     - tar xvzf /tmp/stack.tar.gz -C /tmp
+    - sudo mv /tmp/stack-0.1.6.0-linux-x86_64/stack /usr/bin/stack
 
 test:
   override:
