--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ machine:
 dependencies:
   cache_directories:
     - "~/.stack"
-    - "~/site-generator/.stack-work"
+    - "~/amc-workshop.github.io/site-generator/.stack-work"
   pre:
     - wget https://github.com/commercialhaskell/stack/releases/download/v0.1.6.0/stack-0.1.6.0-linux-x86_64.tar.gz -O /tmp/stack.tar.gz
     - tar xvzf /tmp/stack.tar.gz -C /tmp
